# prisma

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  PROYECTO_PLAN_EJECUCION.md  README.md  compass_artifact_wf-b07eb771-9280-4242-b5b8-be65147fa39a_text_markdown.md
core/: CMakeLists.txt  README.md
core/include/prisma/: abi.hpp  arm64_encoding.hpp  capi.h  cfg.hpp  compress.hpp  cpu_state.hpp  decoder.hpp  dispatcher.hpp  dominators.hpp  emitter.hpp  guest_signal.hpp  host_features.hpp  ir.hpp  ir_analysis.hpp  ir_cfg.hpp  ir_pretty_cache.hpp  ir_serialization.hpp  ir_serialize.hpp  ir_validate.hpp  jit_buffer_pool.hpp  jit_memory.hpp  lowering.hpp  passes.hpp  profiler.hpp  sha256.hpp  signal_handler.hpp  smc_guard.hpp  syscall_handler.hpp  translation_cache.hpp  translator.hpp
core/src/backend/: abi.cpp  emitter.cpp  lowering.cpp
core/src/cache/: compress.cpp  sha256.cpp  translation_cache.cpp
core/src/capi/: capi.cpp
core/src/decoder/: x86_decoder.cpp
core/src/ir/: analysis.cpp  cfg.cpp  dominators.cpp  operation.cpp  pretty_print.cpp  profiler.cpp  serialization.cpp  serialize.cpp  serialize_crc.cpp  serialize_crc.hpp  validate.cpp
core/src/passes/: algebraic.cpp  branch_fold.cpp  const_prop.cpp  copy_prop.cpp  cse.cpp  dce.cpp  dead_store.cpp  flag_write_elim.cpp  flag_write_elim_stub.cpp  global_cse.cpp  licm.cpp  pass_manager.cpp  peephole.cpp  redundant_load.cpp  strength_reduce.cpp  tail_call.cpp  x87_stack.cpp
core/src/runner/: main.cpp
core/src/runtime/: dispatcher.cpp  guest_signal.cpp  host_features.cpp  jit_buffer_pool.cpp  jit_memory.cpp  signal_handler.cpp  smc_guard.cpp  syscall_handler.cpp
core/src/translator/: translator.cpp
core/tests/: test_abi.cpp  test_arm64_encoding.cpp  test_benchmarks.cpp  test_cache_stress.cpp  test_capi.cpp  test_cfg.cpp  test_cpu_state.cpp  test_decoder.cpp  test_dispatcher.cpp  test_dominators.cpp  test_e2e.cpp  test_e2e_dispatcher.cpp  test_emitter.cpp  test_global_cse.cpp  test_guest_signal.cpp  test_host_features.cpp  test_ir.cpp  test_ir_analysis.cpp  test_ir_cfg.cpp  test_ir_serialization.cpp  test_ir_serialize.cpp  test_ir_validate.cpp  test_jit_buffer_pool.cpp  test_jit_execution.cpp  test_licm.cpp  test_lowering.cpp  test_passes.cpp  test_passes_advanced.cpp  test_passes_mem.cpp  test_passes_more.cpp  test_peephole.cpp  test_profiler.cpp  test_property.cpp  test_sha256.cpp  test_signal_handler.cpp  test_smc_guard.cpp  test_syscall_handler.cpp  test_translation_cache.cpp  test_translator.cpp  test_zydis_differential.cpp
fuzz/: CMakeLists.txt  README.md
fuzz/decoder/: fuzz_decoder.cpp
fuzz/tools/: seed_corpus.py
shell/: Cargo.toml  README.md
shell/core/: Cargo.toml
shell/core-sys/: Cargo.toml  build.rs
shell/core-sys/src/: lib.rs
shell/core/src/: lib.rs
shell/core/tests/: fuzz_decoder.rs  integration.rs  pe_e2e.rs  smoke_differential.rs
shell/orchestrator/: Cargo.toml
shell/orchestrator/src/: address_space.rs  backed_address_space.rs  cache_proto.rs  config.rs  container.rs  cpu_features.rs  cpuid_leaves.rs  guest_layout.rs  guest_mem.rs  guest_memory.rs  guest_stack.rs  iat_patch.rs  import_resolver.rs  init_stack.rs  integrity.rs  lib.rs  load_pe.rs  module_table.rs  pe_loader.rs  registry.rs
shell/orchestrator/tests/: fuzz_address_space.rs  fuzz_backed_address_space.rs  fuzz_guest_memory.rs  fuzz_init_stack.rs  fuzz_load_pe.rs  fuzz_module_table.rs  fuzz_pe.rs  loader_integration.rs
shell/prisma-backend/: Cargo.toml
shell/prisma-backend/src/: abi.rs  assembler.rs  lib.rs  lowerer.rs
shell/prisma-backend/tests/: fuzz_lower.rs
shell/prisma-cache/: Cargo.toml
shell/prisma-cache/src/: cache.rs  compress.rs  lib.rs  sha256.rs
shell/prisma-cache/tests/: fuzz_cache.rs
shell/prisma-decoder/: Cargo.toml
shell/prisma-decoder/src/: decode.rs  lib.rs  modrm.rs  prefixes.rs  tables.rs
shell/prisma-decoder/tests/: fuzz_decode.rs
shell/prisma-ir/: Cargo.toml
shell/prisma-ir/src/: lib.rs
shell/prisma-passes/: Cargo.toml
shell/prisma-passes/src/: algebraic.rs  branch_fold.rs  cfg.rs  const_prop.rs  copy_prop.rs  cse.rs  dce.rs  dead_store.rs  flag_write_elim.rs  global_cse.rs  lib.rs  licm.rs  peephole.rs  pipeline.rs  redundant_load.rs  strength_reduce.rs  tail_call.rs  x87_stack.rs
shell/prisma-passes/tests/: fuzz_pipeline.rs
shell/prisma-runtime/: Cargo.toml
shell/prisma-runtime/src/: command_line.rs  dispatcher.rs  exception_record.rs  executor.rs  fd_table.rs  guest_arena.rs  guest_clock.rs  guest_exception.rs  guest_signal.rs  guest_structs.rs  guest_thread.rs  host_features.rs  jit_buffer_pool.rs  jit_memory.rs  lib.rs  nt_status.rs  peb.rs  process_parameters.rs  signal_handler.rs  smc_guard.rs  syscall_handler.rs  teb.rs  windows_string.rs
shell/prisma-runtime/tests/: exec_adc.rs  exec_alu_imm.rs  exec_arena.rs  exec_bitscan.rs  exec_bittest.rs  exec_blockexit.rs  exec_branch_chain.rs  exec_chain.rs  exec_cmpxchg.rs  exec_controlflow.rs  exec_e2e.rs  exec_mem_rebase.rs  exec_mov_imm.rs  exec_muldiv.rs  exec_rcl.rs  exec_syscall.rs  exec_unary_alu.rs  fuzz_exec_pool.rs  fuzz_fd_table.rs  fuzz_guest_structs.rs  fuzz_guest_structs_more.rs  fuzz_signal.rs  fuzz_smc.rs  fuzz_syscall.rs  seh_consistency.rs  smoke_differential.rs
shell/prisma-session/: Cargo.toml
shell/prisma-session/src/: fs_syscalls.rs  guest_io.rs  info_syscalls.rs  io_syscalls.rs  lib.rs  mem_syscalls.rs  process_syscalls.rs  resource_syscalls.rs  sched_syscalls.rs  sig_syscalls.rs  syscall_dispatch.rs  time_syscalls.rs  tty_syscalls.rs
shell/prisma-session/tests/: cfg_walk_branch.rs  diff_loop.rs  dispatch_robustness.rs  execution_seed.rs  fd_lifecycle_e2e.rs  file_handlers_integration.rs  full_pipeline.rs  fuzz_poll.rs  io_syscall_robustness.rs  iovec_validation_robustness.rs  mixed_workload_e2e.rs  process_hierarchy_e2e.rs  process_identity_e2e.rs  run_call_ret_e2e.rs  run_loop_e2e.rs  (+8 more)
shell/prisma-translator/: Cargo.toml
tools/benchmarks/: BENCH_PY_README.md  README.md  bench.py  pyproject.toml
(+157 files in other folders)
