# Prisma Rust workspace.
# Status: skeleton. Real container / FFI / networking work lands
# Fase 1+ as the C++ core stabilises.

[workspace]
resolver = "2"
members = [
    "orchestrator",
    "core-sys",
    "core",
    "prisma-ir",
]
# The bridge crates (core-sys, core) link against the C++ core's
# prisma_core_c shared library (RFC 0014) and need PRISMA_CORE_LIB_DIR
# at link time. Default cargo invocations cover the pure-Rust
# orchestrator; the ffi-link CI job covers the bridge.
default-members = [
    "orchestrator",
]

[workspace.package]
version       = "0.0.1"
edition       = "2021"  # bump to 2024 once it's stable.
license       = "Apache-2.0"
repository    = "https://github.com/prisma-emu/prisma"
authors       = ["Danny <danny@prisma-emu.dev>"]
rust-version  = "1.82"  # bumped from 1.75 for the FFI bridge (ptr::from_ref et al.)

[workspace.dependencies]
serde      = { version = "1.0",  features = ["derive"] }
toml       = "0.8"
sha2       = "0.10"
zstd       = "0.13"
thiserror  = "1.0"
anyhow     = "1.0"
# Property-based fuzzing of parsers (CLAUDE.md testing conventions).
proptest   = "1.5"

[profile.release]
lto             = "thin"
codegen-units   = 1
panic           = "abort"
strip           = true

[profile.release-dbg]
inherits        = "release"
strip           = false
debug           = "limited"
