[package]
name          = "prisma_orchestrator"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
rust-version  = { workspace = true }

description = "Prisma container orchestrator: lifecycle, overlay FS, downloader, P2P cache"

[lib]
crate-type = ["lib", "cdylib"]   # cdylib for the eventual Android JNI bridge.

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
sha2      = { workspace = true }
zstd      = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }

[dev-dependencies]
tempfile   = "3.10"
serde_json = "1.0"

# Lints — match the Prisma C++ "warnings as errors" stance.
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use        = "deny"

[lints.clippy]
all                   = "warn"
pedantic              = "warn"
nursery               = "warn"
needless_pass_by_value = "warn"
