[package]
name          = "prisma_orchestrator"
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
authors       = { workspace = true }
rust-version  = { workspace = true }

description = "Prisma container orchestrator: lifecycle, overlay FS, downloader, P2P cache"

[lib]
crate-type = ["lib", "cdylib"]   # cdylib for the eventual Android JNI bridge.

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
sha2      = { workspace = true }
zstd      = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
# Reused for the contiguous-arena backing of BackedAddressSpace (RFC 0020): one
# host mapping so a single mem_base maps guest VAs to host addresses for the JIT.
# (Layering note: this points "up" at prisma-runtime only to reuse GuestArena's
# OS-page primitive; a future low-level `os-mem` crate could host it instead.)
prisma-runtime = { path = "../prisma-runtime" }

[dev-dependencies]
tempfile   = "3.10"
serde_json = "1.0"
proptest   = { workspace = true }

# Lints — match the Prisma C++ "warnings as errors" stance.
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use        = "deny"

[lints.clippy]
all                   = "warn"
pedantic              = "warn"
nursery               = "warn"
needless_pass_by_value = "warn"
