[project]
name = "prisma-benchmarks"
version = "0.0.1"
description = "Benchmark harness for the Prisma DBT: runs corpora of x86_64 binaries under Prisma and compares against QEMU / Box64 / FEX / native"
requires-python = ">=3.12"
authors = [{ name = "Danny" }]
readme = "README.md"
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "rich>=13.7",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.scripts]
prisma-bench = "prisma_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prisma_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
